2014-12-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync.in: Remove stray "=" introduced with last
	commit.

2014-12-08  Michael Wiegand <michael.wiegand@greenbone.net>

	Generate greenbone-nvt-sync during build as well so that information
	available at build time is used and does not have to be gathered at
	runtime.

	* CMakeLists.txt: Add tools/greenbone-nvt-sync to the list of files to
	be generated and ignore generated file when packaging source tar ball.
	Install generated file from build directory.

	* tools/greenbone-nvt-sync.in: New. Renamed from greenbone-nvt-sync.
	Use CMake variables instead of runtime checks. Simplify variables
	derived from CMake variables.

	* tools/greenbone-nvt-sync: Moved to greenbone-nvt-sync.in.

2014-12-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Updated/improved version info.

2014-11-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt, src/CMakeLists.txt: Remove check for and linking
	against libgnutls and libpcap.  This is already done adequately in
	libraries.

	* src/openvassd.c: Remove useless includes.

2014-11-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Remove nvti_set_src() call.

2014-11-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Remove cur_plug and num_plugs arguments.
	Don't send scan status.
	(attack_host): Send scan status after launching plugin.

2014-11-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta5.

2014-11-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 5.0+beta4 release.

	* CHANGES: Updated.

2014-11-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Adjust comm_send_status() call.

2014-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
